[gd_scene load_steps=11 format=2]

[ext_resource path="res://systems/planet.gd" type="Script" id=1]
[ext_resource path="res://assets/planet_noise_procedural.shader" type="Shader" id=2]
[ext_resource path="res://assets/Planet-shadow_only.png" type="Texture" id=3]


[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/rotate_perc = 0.0
shader_param/cut_off = 0.519
shader_param/color_land = Color( 0.027451, 0.313726, 0.027451, 1 )
shader_param/color_sea = Color( 0.117647, 0.631373, 0.113725, 1 )

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 aura_color : hint_color;

void fragment()
{
	vec4 col = texture(TEXTURE, UV);
	
	if (col.a > 0.08 && col.r > 0.1)
	{
		COLOR.rgba = vec4(aura_color.rgb, col.a);
	}
	else
	{
		COLOR.rgba = col.rgba; //+ vec3(1,0,0);
	}
	//COLOR.rgb = vec3(1,0,0);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/aura_color = Color( 1, 0.706604, 0.0117188, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="CircleShape2D" id=7]
radius = 150.0

[node name="planet" type="Node2D" groups=[
"planets",
]]
z_index = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.5, 0.5 )
texture = SubResource( 3 )

[node name="Sprite_shadow" type="Sprite" parent="."]
visible = false
material = SubResource( 5 )
scale = Vector2( 0.43, 0.43 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 150.0
margin_top = 150.0
margin_right = 202.0
margin_bottom = 164.0
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Emerald"

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="orbit_holder" type="Node2D" parent="."]

[node name="pop_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="module_timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="pop_timer" to="." method="_on_pop_timer_timeout"]
[connection signal="timeout" from="module_timer" to="." method="_on_module_timer_timeout"]
